--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -1,6 +1,5 @@
 .about {
   padding: 100px 20px 80px;
-  background-image: url("./images/about-bg.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -14,7 +13,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* затемнення */
+  background-color: rgba(0, 0, 0, 0.5); 
   z-index: 0;
 }
 
