--- a/src/components/BlogSection/BlogSection.css
+++ b/src/components/BlogSection/BlogSection.css
@@ -1,6 +1,5 @@
 .blog {
   padding: 100px 20px;
-  background-image: url("./images/blog-bg.webp");
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -49,8 +48,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%; /* розтяг на повну */
-  min-height: 450px; /* або 480px, на смак */
+  height: 100%; 
+  min-height: 450px; 
 }
 
 .blog__card:hover {
