--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -73,3 +73,60 @@
 .menu__logo-link::after {
   display: none; 
 }
+
+.arrows-container {
+  border: 1px solid white;
+  width: 60px;
+  height: 60px;
+  background-color: rgba(30, 30, 30, 0.7);
+  border-radius: 50%;
+  margin: 0 auto;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+  cursor: pointer;
+}
+
+.arrows-container:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 12px rgba(255, 255, 255, 0.6);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.arrows {
+  width: 10px;
+  height: 10px;
+  position: relative;
+  margin: 23px auto;
+}
+
+.arrows::after,
+.arrows::before {
+  content: "";
+  position: absolute;
+  border-bottom: 2px solid white;
+  border-left: 2px solid white;
+  width: 100%;
+  height: 100%;
+
+  animation: arrow 3s linear infinite;
+}
+
+.arrows::after {
+  animation: arrow 3s linear infinite -1.5s;
+}
+
+
+.arrows-container--disabled {
+  pointer-events: none; /* не клікабельна */
+  opacity: 0.4;
+}
+
+.arrows-container--disabled:hover {
+  transform: none;
+  box-shadow: none;
+}
