--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-   position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -18,15 +18,14 @@
 
 .menu {
   position: fixed;
-  top: 30px; 
+  top: 30px;
   width: 100%;
   z-index: 200;
   background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30px; 
-  
+  height: 30px;
 }
 
 .menu__list {
@@ -67,11 +66,11 @@
 }
 
 .menu__logo-link {
-  pointer-events: none; 
+  pointer-events: none;
 }
 
 .menu__logo-link::after {
-  display: none; 
+  display: none;
 }
 
 .arrows-container {
@@ -120,13 +119,89 @@
   animation: arrow 3s linear infinite -1.5s;
 }
 
-
 .arrows-container--disabled {
-  pointer-events: none; /* не клікабельна */
+  pointer-events: none;
   opacity: 0.4;
 }
 
 .arrows-container--disabled:hover {
   transform: none;
   box-shadow: none;
+}
+
+/* -------------------- */
+@media (max-width: 768px) {
+  .menu__list {
+    display: none;
+  }
+
+  .menu {
+    top: 0;
+  }
+
+  .title {
+    font-size: 40px !important;
+    text-align: center;
+    line-height: 1.2;
+  }
+
+  .text {
+    font-size: 14px !important;
+    text-align: center;
+  }
+}
+
+@media (min-width: 769px) {
+  .menu__list--mobile {
+    display: none;
+  }
+}
+
+.burger {
+  display: none;
+  font-size: 24px;
+  background: none;
+  color: white;
+  border: none;
+  position: fixed;
+  top: 30px;
+  right: 20px;
+  z-index: 300;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .burger {
+    display: block;
+  }
+
+  .menu__list--mobile {
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.85);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 40px 0;
+    z-index: 100;
+
+    transition: left 0.4s ease-in-out;
+  }
+
+  .menu__list--mobile.menu__list--open {
+    left: 0;
+  }
+
+  .menu__link {
+    font-size: 30px;
+  }
+}
+
+body.menu-open {
+  overflow: hidden;
+  height: 100vh;
 }
